--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ body,
 #root {
   min-height: 100%;
   margin: 0;
-  width: 100%;
 }
 
 body {
